# identity-service-api

./: .gitignore  0-926a9a1c-8d30-422e-a559-b48a82a7b92c___pgeuf137d9bb___europe-west2___281.json  1-926a9a1c-8d30-422e-a559-b48a82a7b92c___pgeuf137d9bb___europe-west2___282.json  2-3e7aacac-8f02-40a2-abdd-8afe0b9915d2___pgeuf137d9bb___europe-west2___276.json  3-1c67a0a0-ad3d-464b-b8fd-a19459bfb3dd___pgeuf137d9bb___europe-west2___272.json  CHANGELOG.md  Makefile  README.md  apm-1104-notes.md  azure-pipelines.yml  azure-release-pipelines.yml  conftest.py  docker-compose.yml  ecs-deploy-internal-dev.yml  ecs-proxies-containers.yml  envs.sh  manifest_template.yml  out.json  package-lock.json  package.json  pyproject.toml  pytest.ini  transaction-3.json
.github/: dependabot.yml
.github/workflows/: continuous-integration.yml  pr-lint.yaml  sbom.yml  version-tag.yml
api_tests/: Dockerfile  Makefile  README.md  docker-compose.yml  docker.env  pyproject.toml  requirements.txt
api_tests/config_files/: config.py  environments.py
api_tests/performance/: README.md  locustfile.py  pyproject.toml
api_tests/scripts/: apigee_api.py  authenticator.py  base.py  check_oauth_endpoints.py  config.py  generic_request.py  genericrequest.py  pds_request.py  response_bank.py
api_tests/steps/: check_oauth.py  check_oauth_endpoints.py  check_pds.py
api_tests/tests/: conftest.py  pytest.ini  test_endpoints.py  test_error_conditions.py  test_token_refresh.py
api_tests/tests/oauth/: test_error_response_endpoints.py  test_error_response_tokens.py  test_happy_path_tokens.py  test_jwt_unattended_access.py  test_oauth_endpoints.py  test_oauth_tokens.py  test_product_scopes.py
api_tests/tests/oauth/endpoints/: test_error_responses.py  test_happy_path.py
api_tests/tests/oauth/token_refresh/: test_error_responses.py  test_happy_path.py
api_tests/tests/pds/: test_app_restricted_access.py  test_asid_parameter.py
azure/: azure-build-pipeline.yml  azure-pr-pipeline.yml  azure-release-pipeline.yml  project-vars.yml  project.yml
azure/components/: get-access-token.yml  get-aws-secrets-and-ssm-params.yml  get-mfa-code.yml  notify-github-pending.yml  setup-utils.yml
azure/templates/: associate-build-with-branch.yml  deploy-namespaced-service.yml  deploy-service.yml  deploy-specs.yml  download-build-artifact.yml  execute-api-tests.yml  identity-service-templating-temp.yml  identity-service-templating.yml  identity-service-tests.yml  run-integration-tests.yml  setup-build-name.yml  setup-terraform.yml
docker/dummy-api/: Dockerfile  Makefile
docker/dummy-api/app/: main.py
docs/: simulated_idp.md
e2e/: Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt
e2e/performance/: README.md  locustfile.py  pyproject.toml
e2e/scripts/: config.py  generic_request.py  pds_request.py  response_bank.py
e2e/steps/: check_pds.py
e2e/tests/: conftest.py
e2e/tests/client_credentials/: test_client_credentials_jwt.py
e2e/tests/logging/: test_attach_logging_fields.py  test_splunk_auth_user.py  test_splunk_loggging.py  test_splunk_logging.py
e2e/tests/oauth/: conftest.py  envs.sh  test_authorization_code.py  test_back_channel_logout.py  test_backchannel_logout.py  test_client_credentials.py  test_jwt_unattended_access.py  test_oauth_endpoints.py  test_oauth_health.py  test_oauth_tokens.py  test_product_scopes.py  test_token_exchange.py
e2e/tests/oauth/utils/: authenticator.py  check_oauth.py  config.py  helpers.py
e2e/tests/pds/: test_app_restricted_access.py
e2e/tests/product_scopes/: test_product_scopes.py
e2e/tests/utils/: config.py  helpers.py  response_bank.py
proxies/live/apiproxy/policies/: AccessControl.VerifyIP.xml  AccessEntity.ApiKeyRetrieveScopes.xml  AccessEntity.GetProductDetails.xml  AssignMessage.AccessTokenExpiryOverride.xml  AssignMessage.AccessTokenExpiryOverrideAuthType.xml  AssignMessage.AccessTokenScope.xml  AssignMessage.AddPayloadToPing.xml  AssignMessage.ApplicationRestrictedScope.xml  AssignMessage.AudClaimInvalid.xml  AssignMessage.AuthCodeRedirect.xml  AssignMessage.BackchannelLogoutResponse.xml  AssignMessage.CCJWKS.xml  AssignMessage.CacheKeyError.xml  AssignMessage.CatchallErrorMessage.xml  AssignMessage.ChangeGrantType.xml  AssignMessage.ChangeGrantTypeToClientCrentials.xml  AssignMessage.ChangeGrantTypeToPassword.xml  AssignMessage.ClientCredentialsGenerateTokenResponse.xml  AssignMessage.ClientCredentialsInvalidSubject.xml  AssignMessage.CompanyStatusNotActive.xml  AssignMessage.DeveloperStatusNotActive.xml  (+294 more)
scripts/: build_proxy.sh  create-sbom.sh  update-sbom.py
specification/: identity-service.yaml
specification/components/responses/: InvalidRequest.yaml  Unauthorized.yaml
specification/components/schemas/: ErrorResponse.yaml
templates/: deploy-service.yml  identity-service-templating.yml  setup-terraform.yml
terraform/: main.tf  variables.tf
(+44 files in other folders)
