[project]
python = "^3.8"

[tool.poetry]
name = "auth-service"
version = "0.0.1-alpha"
description = ""
authors = []
readme = 'README.md'
license = "MIT"
repository = "https://github.com/NHSDigital/identity-service-api"
homepage = ""
keywords = ["healthcare", "uk", "nhs"]

[tool.poetry.dependencies]
python = "^3.8"
pytest-rerunfailures = "^10.0"
beautifulsoup4 = "^4.10.0"
selenium = "^4.0.0"
pytest-xdist = {extras = ["psutil"], version = "^2.4.0"}
pytest-custom-exit-code = "^0.3.0"
pytest-nhsd-apim = "^3.3.2"


[tool.poetry.dev-dependencies]
pyyaml = "^5.2"
docopt = "^0.6.2"
jsonpath-rw = "^1.4.0"
semver = "^2.9.0"
gitpython = "^3.1.32"
flake8 = "^3.7.9"
black = "^19.10b0"
pip-licenses = "^2.0.1"
jinja2 = "^2.11.1"
bandit = "^1.6.2"
autopep8 = "^1.5.4"
requests = "^2.25.0"
pytest = "^6.1.2"
aiohttp = "^3.7.3"
pytest-asyncio = "^0.14.0"
coverage = "^5.3"
pytest-xdist = "^2.1.0"
pytest-sugar = "^0.9.4"
api-test-utils = {url = "https://github.com/NHSDigital/apim-test-utils/releases/download/v1.1.35-alpha/api_test_utils-1.1.35a0-py3-none-any.whl"}
python-dotenv = "^0.17.1"
PyJWT = "^2.3.0"
cryptography = "^36.0.1"
pytest-docker = "^0.10.3"

[tool.poetry.scripts]
