[project]
python = "^3.9"

[tool.poetry]
name = "auth-service"
version = "0.0.1-alpha"
description = ""
authors = []
readme = 'README.md'
license = "MIT"
repository = "https://github.com/NHSDigital/identity-service-api"
homepage = "https://github.com/NHSDigital/identity-service-api"
keywords = ["healthcare", "uk", "nhs"]

[tool.poetry.dependencies]
python = "^3.9"
pytest-rerunfailures = "^10.0"
beautifulsoup4 = "^4.10.0"
selenium = "^4.0.0"
pytest-xdist = {extras = ["psutil"], version = "^2.4.0"}
pytest-custom-exit-code = "^0.3.0"
pytest-nhsd-apim = "^3.4.3"
pyjwt = "^2.9.0"


[tool.poetry.group.dev.dependencies]
pyyaml = "^5.2"
docopt = "^0.6.2"
jsonpath-rw = "^1.4.0"
semver = "^2.9.0"
gitpython = "^3.0.5"
flake8 = "^7.1.2"
black = "^24.3.0"
pip-licenses = "^2.0.1"
jinja2 = "^3.1.6"
bandit = "^1.6.2"
autopep8 = "^1.5.4"
requests = "^2.25.0"
pytest = "^8.3.2"
aiohttp = "^3.9.4"
pytest-asyncio = "^0.14.0"
coverage = "^5.3"
pytest-xdist = "^2.1.0"
pytest-sugar = "^0.9.4"
python-dotenv = "^0.17.1"
PyJWT = "^2.9.0"
cryptography = "^43.0.0"
pytest-docker = "^3.1.1"

[tool.poetry.scripts]

