[tool.poetry]
name = "e2e"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^6.0"
docopt = "^0.6.2"
jsonpath-rw = "^1.4.0"
semver = "^2.13.0"
GitPython = "^3.1.24"
flake8 = "^4.0.1"
black = "^21.9b0"
pip-licenses = "^3.5.3"
Jinja2 = "^3.0.2"
bandit = "^1.7.0"
autopep8 = "^1.5.7"
requests = "^2.26.0"
pytest = "^6.2.5"
pytest-rerunfailures = "^10.2"
aiohttp = "^3.7.4"
pytest-asyncio = "<0.15.0"
coverage = "^6.0.2"
pytest-xdist = "^2.4.0"
pytest-sugar = "^0.9.4"
api-test-utils = {url = "https://github.com/NHSDigital/apim-test-utils/releases/download/v1.1.12-alpha/api_test_utils-1.1.12a0-py3-none-any.whl"}
python-dotenv = "^0.19.1"
selenium = "^4.0.0"
pytest-docker = "^0.10.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
