[tool.poetry]
name = "identity-service-performance-tests"
version = "0.1.0"
description = "Manual performance test for Identity Service"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
locust = "^1.1.1"
pyjwt = "^2.0.0"
cryptography = "^3.3.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
