[tool.poetry]
name = "identity-service-performance-tests"
version = "0.1.0"
description = "Manual performance test for Identity Service"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
locust = "^1.1.1"
pyjwt = "^2.4.0"
cryptography = "^43.0.0"
flask = "2.2.5"

[tool.poetry.group.dev.dependencies]
flake8 = "^3.8.3"
black = "^24.3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
